# JII-MultispeQ-Protocols

./: .gitignore  LICENSE  README.md  build.sh  example-protocol.html  genindex.html  getting-started.html  index.html  install.html  objects.inv  protocol-elements.html  protocols-schema.html  protocols.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml
_downloads/cbade8e625532832d9de159ef9ecd8e8/: spad.py
_modules/: index.html
_modules/jii_multispeq_protocols/: validate.html
_modules/jii_multispeq_protocols/protocols/: par.html  phi2.html  rides.html  spad.html
_sources/: getting-started.rst.txt  index.rst.txt  install.rst.txt  protocols.rst.txt
_sources/protocols/: par.rst.txt  phi2.rst.txt
_static/examples/: analysis.py
_static/images/: plot-pulses-1-light.py  plot-pulses-n-light.py
docs/: requirements.txt
docs/source/: conf.py  downloads.rst  example-protocol.rst  getting-started.rst  index.rst  porting.rst  protocol-elements.rst  protocols-schema.rst  protocols.py  schema.py
docs/source/_static/css/: custom.css
docs/source/_static/downloads/: Calibrate MultispeQ Device.ipynb  Create A Protocol.ipynb
docs/source/_static/examples/: template.py
docs/source/_static/images/: plot-phi2.py
docs/source/protocols/: rides.rst  spad.rst
docs/source/scripts/: protocol.py  protocols.py  schema.py
jii_multispeq_protocols/: __init__.py  schema.json  validate.py  visualize.py
jii_multispeq_protocols/protocols/: __init__.py  par.py  phi2.py  rides.py
jii_multispeq_protocols/protocols/calibrations/: __init__.py  electronic_offsets_calibration.py  fluorescence_detector_offsets_calibration.py  ir_led_calibration.py  leaf_clamp_leds_calibration.py  leaf_thickness_gauge_calibration.py  main_body_leds_calibration.py  par_sensor_calibration.py  relative_chlorophyll_spad_calibration.py  reset_to_default_settings.py
protocols/: par.html  phi2.html  rides.html  spad.html
